--- a/daisyo-day1/index.html
+++ b/daisyo-day1/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charest="UTF-8">
-        <meta name=" viewpost"content="width=device-width">
-        <time>Web体験 Day1</time>
-        <link rel="stylesheet"href="styles.css">
-    </head>
-    <body>
-        <main class="container">
-            <h1>Webシステム開発体験 Day1</h1>
-            <p>このページは GitHub Pagesで公開されます。</p>
-            <button id="helloBtn">メッセージを表示</button>
-            <p id ="messgae" class="message">(ここに結果が表示されます)</p>
-        </main>
-    </body>
-    </html>        
+<head>
+    <meta charest="UTF-8">
+    <meta name=" viewpost"content="width=device-width">
+    <title>Web体験 Day1</title>
+    <link rel="stylesheet"href="styles.css">
+</head>
+<body>
+    <main class="container">
+        <h1>Webシステム開発体験 Day1</h1>
+        <p>このページは GitHub Pagesで公開されます。</p>
+        <button id="helloBtn">メッセージを表示</button>
+        <p id ="messgae" class="message">(ここに結果が表示されます)</p>
+    </main>
+</body>
+</html>        
