--- a/daisyo-day1/index.html
+++ b/daisyo-day1/index.html
@@ -13,5 +13,6 @@
         <button id="helloBtn">メッセージを表示</button>
         <p id ="messgae" class="message">(ここに結果が表示されます)</p>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>        
