--- a/daisyo-day1/index.html
+++ b/daisyo-day1/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charest="UTF-8">
-    <meta name="viewpost"content="width=device-width">
+    <meta name="viewport"content="width=device-width">
     <title>Web体験 Day1</title>
     <link rel="stylesheet"href="styles.css">
 </head>
@@ -11,7 +11,7 @@
         <h1>Webシステム開発体験 Day1</h1>
         <p>このページは GitHub Pagesで公開されます。</p>
         <button id="helloBtn">メッセージを表示</button>
-        <p id ="messgae" class="message">(ここに結果が表示されます)</p>
+        <p id ="message" class="message">(ここに結果が表示されます)</p>
     </main>
     <script src="script.js"></script>
 </body>
