--- a/daisyo-day3/index.html
+++ b/daisyo-day3/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF8">
     <title>Day3 在庫管理アプリ(文化祭ドリンク)</title>
-    <!--CSS　ファイルを読み込む-->>
+    <!--CSS　ファイルを読み込む-->
     <link rel="stylesheet"href="assets/css/inventory.css">
 </head>
 <body>
     <h1>文化祭ドリンク在庫管理 (Day3)</h1>
-    <p>＋／－ボタンおを押して在庫数を変更してみましょう。</p>
+    <p>＋／－ボタンを押して在庫数を変更してみましょう。</p>
 
     <!--在庫一覧を表示する表-->
     <table>
