--- a/daisyo-day3/index.html
+++ b/daisyo-day3/index.html
@@ -21,6 +21,9 @@
                 <th>操作</th>
             </tr>
         </thead>
+        <tbody id="item-list">
+            <!--JavaScript から自動で行(tr) が追加されます -->
+        </tbody>   
     </table>
     
     <!--JavaScript ファイルを一番最後に読み込む-->
