--- a/daisyo-day4/index.html
+++ b/daisyo-day4/index.html
@@ -52,7 +52,7 @@
       style="display:none;"
     >
       <!-- ★自分の StaticForms の APIキーを設定する（授業後は削除／無効化） -->
-      <input type="hidden" name="apiKey" value="sf_lc5e5eff71he8nnfca3nn6f7" />
+      <input type="hidden" name="apiKey" value="sf_gmj8dm22ig3n320k0f5k9m33" />
 
 
       <!-- メール件名 -->
@@ -63,7 +63,7 @@
       <input
         type="hidden"
         name="redirectTo"
-        value="https://example.github.io/daisho/daisho-day4/"
+        value="https://hrts731-prog.github.io/daisho/daisho-day4/"
       />
 
 
