--- a/daisyo-day4/index.html
+++ b/daisyo-day4/index.html
@@ -63,7 +63,7 @@
       <input
         type="hidden"
         name="redirectTo"
-        value="https://hrts731-prog.github.io/daisho/daisho-day4/"
+        value="https://hrts731-prog.github.io/daisho/daisyo-day4/"
       />
 
 
